---
source: relay-general/src/pii/convert.rs
expression: pii_config
---
{
  "applications": {
    "(($string|$number|$array)&(~(debug_meta.**|$frame.filename|$frame.abs_path|$logentry.formatted))&(~url)&(~message)&(~'http.request.url')&(~'*url*')&(~'*message*')&(~'*http.request.url*'))": [
      "@common:filter"
    ],
    "($request.env.REMOTE_ADDR|$user.ip_address|$sdk.client_ip)": [
      "@anything:remove"
    ]
  }
}
